nextjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        image: daryta/nextjsdeploy
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/usr/share/nextjs"
          name: nextjs-storage
      volumes:
      - name: nextjs-storage
        persistentVolumeClaim:
          claimName: nextjs-pvc
